kubernetes-manifests/ms-agenda.yaml
# kubernetes-manifests/ms-agenda.yaml

# 1. Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: ms-agenda-service
  labels:
    app: ms-agenda
spec:
  selector:
    app: ms-agenda
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
---

# 2. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-agenda-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-agenda
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: ms-agenda
    spec:
      containers:
        - name: ms-agenda
          image: ms-agenda:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
