kubernetes-manifests/ms-auth.yaml
# kubernetes-manifests/ms-auth.yaml

# 1. Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: ms-auth-service
  labels:
    app: ms-auth
spec:
  selector:
    app: ms-auth
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
---

# 2. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: ms-auth
    spec:
      containers:
        - name: ms-auth
          image: ms-auth:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
