kubernetes-manifests/ms-tutorias.yaml
# kubernetes-manifests/ms-tutorias.yaml

# 1. Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: ms-tutorias-service
  labels:
    app: ms-tutorias
spec:
  selector:
    app: ms-tutorias
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---

# 2. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-tutorias-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-tutorias
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: ms-tutorias
    spec:
      containers:
        - name: ms-tutorias
          image: ms-tutorias:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
