kubernetes-manifests/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ms-usuarios-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ms-usuarios
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ms-tutorias
    ports:
    - protocol: TCP
      port: 3001

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-protection-usuarios
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: db-usuarios
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ms-usuarios
    ports:
    - protocol: TCP
      port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-protection-tutorias
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: db-tutorias
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ms-tutorias
    ports:
    - protocol: TCP
      port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-protection-agenda
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: db-agenda
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ms-agenda
    ports:
    - protocol: TCP
      port: 5432
